--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -14,6 +14,8 @@
 \RequirePackage{physics} % for derivatives
 \RequirePackage{cancel} % for canceling terms
 
+\newcommand{\gt}{>}
+\newcommand{\lt}{<}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
