--- a/S2_P2_CS2.tex
+++ b/S2_P2_CS2.tex
@@ -237,11 +237,11 @@ Consider two strings such that $\abs{A}, \abs{B} \leq n$ and the function \textt
 
 We can translate the three operations into a recursive formulation:
 
-\begin{align*}
+\begin{align}
     \texttt{ed}(A, B) & \leq \texttt{ed}(A[0:n-1], B) + 1                                                      \\
     \texttt{ed}(A, B) & \leq \texttt{ed}(A, B[0:n-1]) + 1                                                      \\
     \texttt{ed}(A, B) & \leq \texttt{ed}(A[0:n-1], B[0:n-1]) + (0 \text{ if } A[n-1] = B[n-1] \text{ else } 1)
-\end{align*}
+\end{align}
 
 where the first one is deletion, the second one is insertion and the third one is substitution.
 Now we note that the $\texttt{ed}(A, B)$ is the minimum of the three values above.
@@ -396,5 +396,211 @@ First we prove that $D_{ij}$ is an upper bound of the shortest path between $i$ 
     \end{description}
 
 \end{proof}
+
+% Class of 09/04/2024
+
+\section{Flows}
+
+In this section of the course we will look at the concepts of \emph{flows} and \emph{cuts} in a network and develop an algorithm to compute the maximum flows.
+
+\subsection{Introduction}
+
+\subsubsection{Example: water pipeline}
+
+Suppose we have a water pipeline network that we can represent as a directed graph, where the arrows represent the direction the water flows.
+To each edge we associate a number that represents the capacity of the pipe, that is, the maximum amount of water it can flow through it.
+
+Given the source of water $s$ and a sink $t$ we need to find the maximum amount of water that can be pushed from $s$ to $t$.
+
+\subsubsection{The idea}
+
+Consider the network in figure \ref{fig:flow}.
+
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}
+        \node[draw, circle] (s) at (0,0) {$s$};
+        \node[draw, circle] (a) at (2,1.5) {$a$};
+        \node[draw, circle] (b) at (4,1.5) {$b$};
+        \node[draw, circle] (c) at (2,-1.5) {$c$};
+        \node[draw, circle] (d) at (4,-1.5) {$d$};
+        \node[draw, circle] (t) at (6,0) {$t$};
+
+        \draw[thick, ->] (s) -- node[midway, anchor=south east]{$1$} (a);
+        \draw[thick, ->] (s) -- node[midway, anchor=north east]{$4$} (c);
+        \draw[thick, ->] (a) -- node[midway, anchor=south]{$3$} (b);
+        \draw[thick, ->] (b) -- node[midway, anchor=south west]{$2$} (t);
+        \draw[thick, ->] (c) -- node[midway, anchor=north]{$2$} (d);
+        \draw[thick, ->] (d) -- node[midway, anchor=north west]{$2$} (t);
+        \draw[thick, ->] (a) -- node[midway, anchor=east]{$1$} (c);
+        \draw[thick, ->] (d) -- node[midway, anchor=north east]{$2$} (a);
+        \draw[thick, ->] (d) -- node[midway, anchor=west]{$3$} (b);
+    \end{tikzpicture}
+    \caption{An example graph in which we want to calculate the flow from $s$ to $t$. On the edges we have the capacity of each edge}
+    \label{fig:flow}
+\end{figure}
+
+First of all we see that the upper bound of the water going to $t$ is the sum of the capacities of the pipes going into $t$.
+
+Then, to calculate if the solution is optimal or not we could partition the graph starting from $s$ and check how much water is flowing out of each partition.
+This is a loose definition of \emph{cut}, but we will define it better later.
+
+\subsubsection{Example: borrowing and lending}
+
+Imagine there is a group of friends that could lend and borrow money from each other.
+Each edge has an associated value that represent the \say{level of trust}, that is, how much money is $a$ willing to lend to $b$.
+
+Assume that person $t$ wants to borrow from $s$. What is the maximum about $t$ will be able to borrow?
+
+\subsection{Formal definitions}
+
+\begin{definition}[$\delta^+(u)$ and $\delta^-(u)$]
+    For a given directed graph $G = (V, E)$, let $u \in V$. Then we define
+    \begin{align}
+        \delta^+(u) & = \{(w, v) \in E : w = u\} \label{eq:flow:delta_plus}  \\
+        \delta^-(u) & = \{(w, v) \in E : v = u\} \label{eq:flow:delta_minus}
+    \end{align}
+    that is, $\delta^+(u)$ is the set of edges outgoing from $u$, and $\delta^-(u)$ is the set of edges incoming in $u$.
+\end{definition}
+
+\begin{definition}[flow]
+    \label{def:flow:flow}
+    Let $G = (V, E)$ be a directed graph, and $s,t \in V$.
+    A function $f:E \to \R^+$ is called a $s$-$t$ flow if it has the following proprieties:
+    \begin{enumerate}[label=\roman*.]
+        \item $f(a) \geq 0 \enspace \forall e \in E$
+        \item $\sum_{e \in \delta^-(u)} f(e) = \sum_{e \in \delta^+(u)} f(e) \enspace \forall u \in V \setminus \{ s, t \}$, that is the flow that comes in is the same that goes out for every node other than $s$ and $t$.
+    \end{enumerate}
+\end{definition}
+
+\begin{definition}[value of the flow]
+    The value of an $s$-$t$ flow is defined as \begin{equation}
+        {\operatorfont val} (f) = \sum_{e \in \delta^+(s)} f(e) - \sum_{e \in \delta^-(s)} f(e)
+    \end{equation}
+\end{definition}
+
+\begin{remark}
+    The following definition of value of flow is also equivalent:
+    \begin{equation}
+        {\operatorfont val} (f) = \sum_{e \in \delta^-(t)} f(e) - \sum_{e \in \delta^+(t)} f(e)
+    \end{equation}
+\end{remark}
+
+\begin{definition}(capacity constraint)
+    \label{def:flow:capacity_constraint}
+    Let $c: E \to \R^+$ be a capacity function and $f$ a flow.
+    We say that $f$ respects $c$ if $f(a)\leq c(a) \enspace \forall e \in E$.
+\end{definition}
+
+\begin{definition}[cut]
+    Let $G = (V, E)$ be a directed graph.
+    A cut is a partition of $V$ of the form $(U, V \setminus U)$.
+    We will refer to the cut as $U$, since once $U$ and $V$ are given we can get the partition.
+\end{definition}
+
+\begin{definition}[$s$-$t$ cut]
+    An $s$-$t$ cut is a cut $U$ such that $s \in U$ and $t \notin U$.
+\end{definition}
+
+\begin{definition}[capacity of a cut]
+    The capacity if a cut $U$ is the amount of capacity on the edges that are going out of $U$.
+    That is
+    \begin{equation}
+        {\operatorfont cap}(U) = \sum_{\substack{(w, v) \in E \\ w \in U \\ v \notin U}} c(w, v)
+    \end{equation}
+\end{definition}
+
+\begin{remark}
+    We extend the notation of $\delta^+$ and $\delta^-$ to cuts:
+    \begin{align}
+        \delta^+(U) & = \{(w, v) \in E : w \in U u, v \notin U\} \\
+        \delta^-(U) & = \{(w, v) \in E : w \notin U u, v \in U\}
+    \end{align}
+
+    Note that if $U$ consists of just one element, then we get exactly \ref{eq:flow:delta_plus} and \ref{eq:flow:delta_minus}.
+\end{remark}
+
+\subsection{Algorithm}
+
+\begin{definition}[maximum flow problem]
+    Given a directed graph $G(V, E)$, $s, t \in V$, and a capacity function $c$ find an $s$-$t$ flow respecting $c$ of maximum value.
+\end{definition}
+
+\subsubsection{Proof of correctness}
+
+\begin{theorem}[upper bound of the value of a flow]
+    For any $s$-$t$ flow $f$ respecting $c$ and for any $s$-$t$ cut $U$ it holds that ${\operatorfont val}(f) \leq {\operatorfont cap}(U)$.
+\end{theorem}
+
+\begin{proof}
+    We can rewrite the definition of value as
+    \begin{align}
+        {\operatorfont val}(f) & = \sum_{e \in \delta^+(s)} f(e) - \sum_{e \in \delta^-(s)} f(e)                                                                                                                                                       \\
+                               & = \sum_{e \in \delta^+(s)} f(e) - \sum_{e \in \delta^-(s)} f(e) + \sum_{v \in U \setminus \{s\}} \underbrace{\left( \sum_{e \in \delta^+(v)} f(e) - \sum_{e \in \delta^-(v)} f(e)\right)}_{0} \label{eq:flow:proof_1} \\
+                               & = \sum_{v \in U} \left( \sum_{e \in \delta^+(v)} f(e) - \sum_{e \in \delta^-(v)} f(e)\right)  \label{eq:flow:proof_2}                                                                                                 \\
+                               & = \sum_{e \in \delta^+(U)} f(e) - \sum_{e \in \delta^-(U)} f(e) \label{eq:flow:proof_3}
+    \end{align}
+    where in \ref{eq:flow:proof_1} we added the net flow which we know is $0$ by \ref{def:flow:flow},
+    in \ref{eq:flow:proof_2} we added $s$ back in,
+    and in \ref{eq:flow:proof_3} we noted that if an edges $e \in U$, then
+
+
+    Now by \ref{def:flow:capacity_constraint} we note that
+    \begin{equation}
+        \sum_{e \in \delta^+(U)} f(e) \leq \sum_{e \in \delta^+(U)} c(e) = {\operatorfont cap}(U)
+    \end{equation}
+
+    Moreover by \ref{def:flow:flow} we have that
+    \begin{equation}
+        \sum_{e \in \delta^-(U)} f(e) \geq 0
+    \end{equation}
+
+    Therefore
+    \begin{equation}
+        {\operatorfont val}(U) \leq \sum_{e \in \delta^+(U)} f(e) - \sum_{e \in \delta^-(U)} f(e) \leq {\operatorfont cap}(U)
+    \end{equation}
+
+\end{proof}
+
+\subsubsection{Code}
+
+The idea is to start with a flow of $0$. Then we start iterating and at each iteration we increase the value of the flow by checking if there are paths with some residual capacity.
+We will be able to do this efficiently by using cuts.
+
+An idea of an algorithm could be the following, note that it will NOT work as if we were to choose the wrong path we would get an incorrect result.
+
+\begin{minted}{python}
+    def flow(G, s, t, c):
+        # Initialize the flow with 0
+        f = {}
+        for e in G.edges():
+            f[e] = 0
+
+        while True:
+            # Construct a graph with the edges with some
+            # residual capacity
+            E = []
+            for e in G.edges():
+                if c(e) - f(e) > 0:
+                    E.append(e)
+            D = Graph(G.vertices(), E)
+
+            # Find a path from s to t
+            P = find_path(s, t, D)
+
+            # If such path does not exist we stop
+            if P is None:
+                break
+
+            # Find the edge of minimum capacity
+            epsilon = min(P.edges(), key=lamda e_i: c(e_i) - f(e_i))
+
+            # Update the flow of all the edges in the path by adding
+            # the minimum
+            for e_i in P.edges:
+                f[e_i] = f[e_i] + epsilon
+\end{minted}
+
+\subsubsection{Time complexity}
 
 \end{document}
